-hopefully this fixes the table data overlapping issue for windows users.

--- a/project/matching/static/matching/css/style.css
+++ b/project/matching/static/matching/css/style.css
@@ -53,7 +53,7 @@
 #matching-info-table .pet-info-data {
 	display:inline-block;
 	overflow-y:scroll;
-	width:180px;
+	width:170px;
 }
 
 #matching-info-table tbody {
